--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light.NoActionBar"></style>
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.NoActionBar"></style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
