--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
-
+    <include layout="@layout/view_actionbar_menu" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
