--- a/app/src/main/res/layout/view_actionbar_menu_back.xml
+++ b/app/src/main/res/layout/view_actionbar_menu_back.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="68dp"
+    android:layout_height="wrap_content"
     android:background="@color/bg_banner_top"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_alignParentLeft="true"
         android:background="@drawable/selector_act_background"
-        android:src="@mipmap/login_arrow_left"
-        android:contentDescription="@null" />
+        android:contentDescription="@null"
+        android:src="@mipmap/login_arrow_left" />
 
     <TextView
         android:id="@+id/tvwTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/btnBack"
         android:layout_marginLeft="4dp"
+        android:layout_centerVertical="true"
         android:layout_marginRight="4dp"
         android:ellipsize="end"
         android:gravity="left"
@@ -30,6 +33,7 @@
     <RelativeLayout
         android:id="@+id/rltRightFun"
         android:layout_width="48dp"
+        android:layout_alignParentRight="true"
         android:layout_height="48dp">
 
         <ImageButton
@@ -38,16 +42,16 @@
             android:layout_height="48dp"
             android:background="@drawable/selector_act_background"
             android:contentDescription="@null"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tvwMsgCount"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/btnAction"
-            android:layout_marginRight="3dp"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
             android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="10sp"
@@ -64,4 +68,4 @@
             android:visibility="invisible" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
