--- a/app/src/main/res/layout/fragment_common_web.xml
+++ b/app/src/main/res/layout/fragment_common_web.xml
@@ -8,7 +8,7 @@
 
     <include layout="@layout/view_actionbar_menu_back" />
 
-    <cn.innovativest.entertainment.widget.MyScrollView
+    <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,6 +36,6 @@
 
         </LinearLayout>
 
-    </cn.innovativest.entertainment.widget.MyScrollView>
+    </ScrollView>
 
 </LinearLayout>
