--- a/app/src/main/res/layout/view_actionbar_menu_back.xml
+++ b/app/src/main/res/layout/view_actionbar_menu_back.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_banner_top"
+    android:background="@color/white"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -19,22 +19,22 @@
         android:id="@+id/tvwTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/btnBack"
-        android:layout_marginLeft="4dp"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:layout_toRightOf="@+id/btnBack"
         android:ellipsize="end"
         android:gravity="left"
         android:maxLines="1"
         android:text="返回"
-        android:textColor="@android:color/white"
+        android:textColor="@color/color_75_pure_black"
         android:textSize="18sp" />
 
     <RelativeLayout
         android:id="@+id/rltRightFun"
         android:layout_width="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_height="48dp">
+        android:layout_height="48dp"
+        android:layout_alignParentRight="true">
 
         <ImageButton
             android:id="@+id/btnAction"
