--- a/app/src/main/res/layout/activity_html.xml
+++ b/app/src/main/res/layout/activity_html.xml
@@ -23,6 +23,11 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
+            <com.daimajia.numberprogressbar.NumberProgressBar
+                android:id="@+id/number_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <com.github.lzyzsd.jsbridge.BridgeWebView
                 android:id="@+id/wvDesc"
                 android:layout_width="match_parent"
