--- a/app/src/main/res/layout/fragment_common_web.xml
+++ b/app/src/main/res/layout/fragment_common_web.xml
@@ -24,6 +24,11 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
+            <com.daimajia.numberprogressbar.NumberProgressBar
+                android:id="@+id/number_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <com.github.lzyzsd.jsbridge.BridgeWebView
                 android:id="@+id/wvDesc"
                 android:layout_width="match_parent"
@@ -32,6 +37,15 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 tools:ignore="WebViewLayout"></com.github.lzyzsd.jsbridge.BridgeWebView>
+
+            <!--<wendu.dsbridge.DWebView-->
+            <!--android:id="@+id/wvDesc"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_below="@+id/lltContent"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--tools:ignore="WebViewLayout"></wendu.dsbridge.DWebView>-->
 
 
         </LinearLayout>
