--- a/app/src/main/res/layout/fragment_common_web.xml
+++ b/app/src/main/res/layout/fragment_common_web.xml
@@ -13,21 +13,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:descendantFocusability="blocksDescendants"
-        android:fillViewport="true"
-        android:scrollbars="none">
+    <!--<ScrollView-->
+        <!--android:id="@+id/scrollView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:descendantFocusability="blocksDescendants"-->
+        <!--android:fillViewport="true"-->
+        <!--android:scrollbars="none">-->
 
 
-        <LinearLayout
-            android:id="@+id/lltContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:id="@+id/lltContent"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:orientation="vertical">-->
 
             <com.github.lzyzsd.jsbridge.BridgeWebView
                 android:id="@+id/wvDesc"
@@ -48,8 +48,8 @@
             <!--tools:ignore="WebViewLayout"></wendu.dsbridge.DWebView>-->
 
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
-    </ScrollView>
+    <!--</ScrollView>-->
 
 </LinearLayout>
