--- a/app/src/main/res/layout/fragment_mycenter.xml
+++ b/app/src/main/res/layout/fragment_mycenter.xml
@@ -614,6 +614,45 @@
                         android:src="@mipmap/mine_right_arrow" />
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:id="@+id/rltAbout"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@android:color/white">
+
+                    <ImageView
+                        android:id="@+id/ivAbout"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/ic_about" />
+
+                    <TextView
+                        android:id="@+id/tvAbout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/ivAbout"
+                        android:maxLines="1"
+                        android:paddingLeft="10dp"
+                        android:text="关于我们"
+                        android:textColor="#808080"
+                        android:textSize="14sp" />
+
+                    <ImageView
+                        android:id="@+id/ivRightAbout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="20dp"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/mine_right_arrow" />
+                </RelativeLayout>
+
             </LinearLayout>
 
         </RelativeLayout>
